// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check if routes work  renders About page correctly in the proper route. 1`] = `
Array [
  <h2
    className="title"
  >
    Pokemon Pokédex
  </h2>,
  <div
    className="navbarItems"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Home 
    </a>
    <a
      href="/about"
      onClick={[Function]}
    >
      About 
    </a>
  </div>,
  <h1
    className="center"
  >
    This is a project made using react-redux and Pokemon API.
  </h1>,
]
`;

exports[`Check if routes work  renders Home page correctly in the proper route. 1`] = `
Array [
  <h2
    className="title"
  >
    Pokemon Pokédex
  </h2>,
  <div
    className="navbarItems"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Home 
    </a>
    <a
      href="/about"
      onClick={[Function]}
    >
      About 
    </a>
  </div>,
  <h1
    className="title"
  >
    Hi, here you can select to show all the pokémons or you can select a specific type!
  </h1>,
  <div>
    <div
      className="categoryDiv"
    >
      <div
        className="customSelect"
      >
        <select
          onChange={[Function]}
        >
          <option
            value="All"
          >
            All
          </option>
          <option
            value="Normal"
          >
            Normal
          </option>
          <option
            value="Fighting"
          >
            Fighting
          </option>
          <option
            value="Flying"
          >
            Flying
          </option>
          <option
            value="Poison"
          >
            Poison
          </option>
          <option
            value="Ground"
          >
            Ground
          </option>
          <option
            value="Rock"
          >
            Rock
          </option>
          <option
            value="Bug"
          >
            Bug
          </option>
          <option
            value="Ghost"
          >
            Ghost
          </option>
          <option
            value="Steel"
          >
            Steel
          </option>
          <option
            value="Fire"
          >
            Fire
          </option>
          <option
            value="Water"
          >
            Water
          </option>
          <option
            value="Grass"
          >
            Grass
          </option>
          <option
            value="Electric"
          >
            Electric
          </option>
          <option
            value="Psychic"
          >
            Psychic
          </option>
          <option
            value="Ice"
          >
            Ice
          </option>
          <option
            value="Dragon"
          >
            Dragon
          </option>
          <option
            value="Dark"
          >
            Dark
          </option>
          <option
            value="Fairy"
          >
            Fairy
          </option>
          <option
            value="Unknown"
          >
            Unknown
          </option>
          <option
            value="Shadow"
          >
            Shadow
          </option>
        </select>
      </div>
    </div>
    <div
      className="pokemonDiv"
    >
      <div />
    </div>
  </div>,
]
`;

exports[`Check if routes work  renders Navbar page correctly in the proper route. 1`] = `
Array [
  <h2
    className="title"
  >
    Pokemon Pokédex
  </h2>,
  <div
    className="navbarItems"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Home 
    </a>
    <a
      href="/about"
      onClick={[Function]}
    >
      About 
    </a>
  </div>,
]
`;

exports[`Check if routes work  renders Pokemon page correctly in the proper route. 1`] = `
<p
  className="flex"
>
  Fetching Data...
</p>
`;
